refactor: Cleanup some code in `MainActivity`
This commit cleans up some unused code found in `MainActivity.java`, this is to improve code usability. Deprecated APIs are also now replaced by modern APIs.