@@ -1,5 +1,6 @@
 package id.ryenyuku.infinitabs;
 
+import android.annotation.SuppressLint;
 import android.app.*;
 import android.app.Activity;
 import android.content.*;
@@ -12,10 +13,8 @@ import android.text.TextWatcher;
 import android.util.Log;
 import android.view.*;
 import android.view.View;
-import android.view.View.*;
 import android.webkit.*;
 import android.widget.*;
-import android.widget.AdapterView;
 import android.widget.BaseAdapter;
 import android.widget.EditText;
 import android.widget.ImageView;
@@ -24,17 +23,21 @@ import android.widget.ListView;
 import android.widget.ProgressBar;
 import android.widget.TextView;
 
+import androidx.activity.OnBackPressedCallback;
+import androidx.activity.result.ActivityResult;
+import androidx.activity.result.ActivityResultCallback;
+import androidx.activity.result.ActivityResultLauncher;
+import androidx.activity.result.contract.ActivityResultContracts;
 import androidx.appcompat.app.AppCompatActivity;
 
 import com.google.android.material.floatingactionbutton.FloatingActionButton;
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
-import java.io.*;
+
 import java.util.*;
 import java.util.ArrayList;
 import java.util.HashMap;
 
-import androidx.coordinatorlayout.widget.CoordinatorLayout;
 import androidx.swiperefreshlayout.widget.SwipeRefreshLayout;
 
 import java.net.URI;
@@ -42,54 +45,43 @@ import java.net.URLEncoder;
 import java.net.URISyntaxException;
 import java.nio.charset.StandardCharsets;
 
-import kotlin.Suppress;
-
 
 public class MainActivity extends AppCompatActivity {
 	
 	private FloatingActionButton _fab;
 	private HashMap<String, Object> cachedTitle = new HashMap<>();
-	private HashMap<String, Object> cachedThumb = new HashMap<>();
+	private final HashMap<String, Object> cachedThumb = new HashMap<>();
 	private boolean isIncognito = false;
 	private int displayedWV = -1;
 	private boolean isLoading = false;
 	private final int CHOOSE_FILE_REQUEST_CODE = 1;
 	private ValueCallback<Uri[]> filePathCallback;
-	private SwipeRefreshLayout swipelayout;
+	private SwipeRefreshLayout swipeLayout;
 	private boolean isSearching = false;
 	
-	private ArrayList<HashMap<String, Object>> listQueries = new ArrayList<>();
-	private  ArrayList<WebView> webviews = new ArrayList<>();
+	private final ArrayList<HashMap<String, Object>> listQueries = new ArrayList<>();
+	private final ArrayList<WebView> webViewList = new ArrayList<>();
 	
 	private LinearLayout root_tabs;
-	private LinearLayout root_webview;
-	private LinearLayout linear_notab;
+	private LinearLayout root_webView;
+	private LinearLayout linear_noTab;
 	private ListView tabs_list;
-	private LinearLayout linear_t;
-	private TextView sadface_text;
+	private TextView sadFace_text;
 	private ImageView incognito_image;
-	private TextView notab_text;
-	private ImageView settings_button;
-	private LinearLayout spacing_linear;
-	private ImageView incognito_button;
-	private LinearLayout tabscounter_linear1;
-	private TextView tabscounter_text1;
-	private CoordinatorLayout coordinatorlayout;
-	private LinearLayout linear_findbar;
-	private LinearLayout linear_chromebar;
+    private ImageView incognito_button;
+    private TextView tabsCounter_text1;
+    private LinearLayout linear_findBar;
+	private LinearLayout linear_chromeBar;
 	private LinearLayout wv_placeholder;
 	private ListView query_list;
-	private EditText findbar_input;
-	private ImageView findbar_findprev_button;
-	private ImageView findbar_findnext_button;
-	private ImageView findbar_close_button;
-	private ProgressBar wv_progressbar;
-	private LinearLayout linear_searchbar;
-	private EditText urlbar;
+	private EditText findBar_input;
+	private ImageView findBar_findPrev_button;
+	private ImageView findBar_findNext_button;
+    private ProgressBar wv_progressbar;
+    private EditText urlBar;
 	private ImageView refresh_button;
 	private ImageView forward_button;
-	private LinearLayout tabscounter_linear2;
-	private TextView tabscounter_text2;
+    private TextView tabsCounter_text2;
 	
 	private SharedPreferences sharedPref;
 	private RequestNetwork reqNet;
@@ -101,98 +93,80 @@ public class MainActivity extends AppCompatActivity {
 		setContentView(R.layout.main);
 		initialize(_savedInstanceState);
 		initializeLogic();
+
+		getOnBackPressedDispatcher().addCallback(this, onBackPressedCallback);
+
 	}
-	
+
+	@SuppressWarnings("unchecked")
 	private void initialize(Bundle _savedInstanceState) {
 		_fab = findViewById(R.id._fab);
-		
 		root_tabs = findViewById(R.id.root_tabs);
-		root_webview = findViewById(R.id.root_webview);
-		linear_notab = findViewById(R.id.linear_notab);
+		root_webView = findViewById(R.id.root_webview);
+		linear_noTab = findViewById(R.id.linear_notab);
 		tabs_list = findViewById(R.id.tabs_list);
-		linear_t = findViewById(R.id.linear_t);
-		sadface_text = findViewById(R.id.sadface_text);
+		sadFace_text = findViewById(R.id.sadface_text);
 		incognito_image = findViewById(R.id.incognito_image);
-		notab_text = findViewById(R.id.notab_text);
-		settings_button = findViewById(R.id.settings_button);
-		spacing_linear = findViewById(R.id.spacing_linear);
-		incognito_button = findViewById(R.id.incognito_button);
-		tabscounter_linear1 = findViewById(R.id.tabscounter_linear1);
-		tabscounter_text1 = findViewById(R.id.tabscounter_text1);
-		coordinatorlayout = findViewById(R.id.coordinatorlayout);
-		linear_findbar = findViewById(R.id.linear_findbar);
-		linear_chromebar = findViewById(R.id.linear_chromebar);
+        incognito_button = findViewById(R.id.incognito_button);
+        tabsCounter_text1 = findViewById(R.id.tabscounter_text1);
+        linear_findBar = findViewById(R.id.linear_findbar);
+		linear_chromeBar = findViewById(R.id.linear_chromebar);
 		wv_placeholder = findViewById(R.id.wv_placeholder);
 		query_list = findViewById(R.id.query_list);
-		findbar_input = findViewById(R.id.findbar_input);
-		findbar_findprev_button = findViewById(R.id.findbar_findprev_button);
-		findbar_findnext_button = findViewById(R.id.findbar_findnext_button);
-		findbar_close_button = findViewById(R.id.findbar_close_button);
+		findBar_input = findViewById(R.id.findbar_input);
+		findBar_findPrev_button = findViewById(R.id.findbar_findprev_button);
+		findBar_findNext_button = findViewById(R.id.findbar_findnext_button);
 		wv_progressbar = findViewById(R.id.wv_progressbar);
-		linear_searchbar = findViewById(R.id.linear_searchbar);
-		urlbar = findViewById(R.id.urlbar);
+        urlBar = findViewById(R.id.urlbar);
 		refresh_button = findViewById(R.id.refresh_button);
 		forward_button = findViewById(R.id.forward_button);
-		tabscounter_linear2 = findViewById(R.id.tabscounter_linear2);
-		tabscounter_text2 = findViewById(R.id.tabscounter_text2);
+		tabsCounter_text2 = findViewById(R.id.tabscounter_text2);
 		sharedPref = getSharedPreferences("data", Activity.MODE_PRIVATE);
 		reqNet = new RequestNetwork(this);
+
+		ImageView settings_button = findViewById(R.id.settings_button);
+		ImageView findBar_close_button = findViewById(R.id.findbar_close_button);
+		LinearLayout tabsCounter_linear2 = findViewById(R.id.tabscounter_linear2);
+
+		tabs_list.setOnItemClickListener((_param1, _param2, _param3, _param4) -> {
+            _goToWebScreen(_param3);
+        });
 		
-		tabs_list.setOnItemClickListener(new AdapterView.OnItemClickListener() {
-			@Override
-			public void onItemClick(AdapterView<?> _param1, View _param2, int _param3, long _param4) {
-				final int _position = _param3;
-				_goToWebScreen(_position);
-			}
-		});
+		settings_button.setOnClickListener(_view -> {
+            // TODO: Navigate user to settings activity here
+        });
 		
-		settings_button.setOnClickListener(new View.OnClickListener() {
-			@Override
-			public void onClick(View _view) {
-				Intent intent = new Intent();
-				
-				startActivity(intent);
-			}
-		});
+		incognito_button.setOnClickListener(_view -> {
+            Intent intent = new Intent();
+            intent.setClass(getApplicationContext(), MainActivity.class);
+            intent.putExtra("incognito", true);
+            startActivity(intent);
+        });
 		
-		incognito_button.setOnClickListener(new View.OnClickListener() {
-			@Override
-			public void onClick(View _view) {
-				Intent intent = new Intent();
-				intent.setClass(getApplicationContext(), MainActivity.class);
-				intent.putExtra("incognito", true);
-				startActivity(intent);
-			}
-		});
+		query_list.setOnItemClickListener((_param1, _param2, _param3, _param4) -> {
+            urlBar.clearFocus();
+            webViewList.get(displayedWV).loadUrl(_validateUrl((String)listQueries.get(_param3).get("query")));
+        });
 		
-		query_list.setOnItemClickListener(new AdapterView.OnItemClickListener() {
-			@Override
-			public void onItemClick(AdapterView<?> _param1, View _param2, int _param3, long _param4) {
-				final int _position = _param3;
-				urlbar.clearFocus();
-				webviews.get(displayedWV).loadUrl(_validateUrl((String)listQueries.get(_position).get("query")));
-			}
-		});
-		
-		findbar_input.addTextChangedListener(new TextWatcher() {
+		findBar_input.addTextChangedListener(new TextWatcher() {
 			@Override
 			public void onTextChanged(CharSequence _param1, int _param2, int _param3, int _param4) {
 				final String _charSeq = _param1.toString();
 				if (displayedWV == -1) {
 					return;
 				}
-				webviews.get(displayedWV).findAllAsync(_charSeq);
-				if (_charSeq.length() > 0) {
-					findbar_findprev_button.setEnabled(true);
-					findbar_findnext_button.setEnabled(true);
-					findbar_findprev_button.setAlpha((float)(1));
-					findbar_findnext_button.setAlpha((float)(1));
+				webViewList.get(displayedWV).findAllAsync(_charSeq);
+				if (!_charSeq.isEmpty()) {
+					findBar_findPrev_button.setEnabled(true);
+					findBar_findNext_button.setEnabled(true);
+					findBar_findPrev_button.setAlpha((float)(1));
+					findBar_findNext_button.setAlpha((float)(1));
 				}
 				else {
-					findbar_findprev_button.setEnabled(false);
-					findbar_findnext_button.setEnabled(false);
-					findbar_findprev_button.setAlpha((float)(0.5d));
-					findbar_findnext_button.setAlpha((float)(0.5d));
+					findBar_findPrev_button.setEnabled(false);
+					findBar_findNext_button.setEnabled(false);
+					findBar_findPrev_button.setAlpha((float)(0.5d));
+					findBar_findNext_button.setAlpha((float)(0.5d));
 				}
 			}
 			
@@ -207,50 +181,36 @@ public class MainActivity extends AppCompatActivity {
 			}
 		});
 		
-		findbar_findprev_button.setOnClickListener(new View.OnClickListener() {
-			@Override
-			public void onClick(View _view) {
-				if (isSearching && displayedWV != -1) {
-					webviews.get(displayedWV).findNext(false);
-				}
-			}
-		});
+		findBar_findPrev_button.setOnClickListener(_view -> {
+            if (isSearching && displayedWV != -1) {
+                webViewList.get(displayedWV).findNext(false);
+            }
+        });
 		
-		findbar_findnext_button.setOnClickListener(new View.OnClickListener() {
-			@Override
-			public void onClick(View _view) {
-				if (isSearching && displayedWV != -1) {
-					webviews.get(displayedWV).findNext(true);
-				}
-			}
-		});
+		findBar_findNext_button.setOnClickListener(_view -> {
+            if (isSearching && displayedWV != -1) {
+                webViewList.get(displayedWV).findNext(true);
+            }
+        });
 		
-		findbar_close_button.setOnClickListener(new View.OnClickListener() {
-			@Override
-			public void onClick(View _view) {
-				isSearching = false;
-				linear_findbar.setVisibility(View.GONE);
-				linear_chromebar.setVisibility(View.VISIBLE);
-				findbar_input.setText("");
-			}
-		});
+		findBar_close_button.setOnClickListener(_view -> {
+            isSearching = false;
+            linear_findBar.setVisibility(View.GONE);
+            linear_chromeBar.setVisibility(View.VISIBLE);
+            findBar_input.setText("");
+        });
 		
-		urlbar.addTextChangedListener(new TextWatcher() {
+		urlBar.addTextChangedListener(new TextWatcher() {
 			@Override
 			public void onTextChanged(CharSequence _param1, int _param2, int _param3, int _param4) {
 				final String _charSeq = _param1.toString();
-				if (urlbar.hasFocus()) {
-					if (_charSeq.trim().length() > 0) {
+				if (urlBar.hasFocus()) {
+					if (!_charSeq.trim().isEmpty()) {
 						_refreshLocalQueries(_charSeq.trim());
 						((BaseAdapter)query_list.getAdapter()).notifyDataSetChanged();
-						if ((QUERY_MODE == 2) || ((QUERY_MODE == 1) && !isIncognito)) {
-							try {
-								reqNet.startRequestNetwork(RequestNetworkController.GET, String.format(QUERY_URL, URLEncoder.encode(_charSeq.trim(), StandardCharsets.UTF_8.name())), "searchQuery", _reqNet_request_listener);
-							}
-							catch (UnsupportedEncodingException e) {
-								SketchwareUtil.showMessage(getApplicationContext(), e.getMessage());
-							}
-						}
+						if (!isIncognito && Build.VERSION.SDK_INT >= Build.VERSION_CODES.TIRAMISU) {
+							reqNet.startRequestNetwork(RequestNetworkController.GET, String.format(QUERY_URL, URLEncoder.encode(_charSeq.trim(), StandardCharsets.UTF_8)), "searchQuery", _reqNet_request_listener);
+                        }
 					}
 					else {
 						listQueries.clear();
@@ -270,79 +230,58 @@ public class MainActivity extends AppCompatActivity {
 			}
 		});
 		
-		refresh_button.setOnClickListener(new View.OnClickListener() {
-			@Override
-			public void onClick(View _view) {
-				urlbar.clearFocus();
-				if (displayedWV != -1) {
-					if (isLoading) {
-						webviews.get(displayedWV).stopLoading();
-					}
-					else {
-						webviews.get(displayedWV).reload();
-					}
-				}
-			}
-		});
+		refresh_button.setOnClickListener(_view -> {
+            urlBar.clearFocus();
+            if (displayedWV != -1) {
+                if (isLoading) {
+                    webViewList.get(displayedWV).stopLoading();
+                }
+                else {
+                    webViewList.get(displayedWV).reload();
+                }
+            }
+        });
 		
-		forward_button.setOnClickListener(new View.OnClickListener() {
-			@Override
-			public void onClick(View _view) {
-				urlbar.clearFocus();
-				if (displayedWV != -1 && webviews.get(displayedWV).canGoForward()) {
-					webviews.get(displayedWV).goForward();
-				}
-			}
-		});
+		forward_button.setOnClickListener(_view -> {
+            urlBar.clearFocus();
+            if (displayedWV != -1 && webViewList.get(displayedWV).canGoForward()) {
+                webViewList.get(displayedWV).goForward();
+            }
+        });
 		
-		tabscounter_linear2.setOnLongClickListener(new View.OnLongClickListener() {
-			@Override
-			public boolean onLongClick(View _view) {
-				isSearching = true;
-				linear_chromebar.setVisibility(View.GONE);
-				linear_findbar.setVisibility(View.VISIBLE);
-				return true;
-			}
-		});
+		tabsCounter_linear2.setOnLongClickListener(_view -> {
+            isSearching = true;
+            linear_chromeBar.setVisibility(View.GONE);
+            linear_findBar.setVisibility(View.VISIBLE);
+            return true;
+        });
 		
-		tabscounter_linear2.setOnClickListener(new View.OnClickListener() {
-			@Override
-			public void onClick(View _view) {
-				_goBackToTabs();
-			}
-		});
+		tabsCounter_linear2.setOnClickListener(_view -> _goBackToTabs());
 		
-		_fab.setOnClickListener(new View.OnClickListener() {
-			@Override
-			public void onClick(View _view) {
-				_newTab(NEWTAB_URL, null);
-				if (VIEW_WV_ON_ADD) {
-					_goToWebScreen(webviews.size() - 1);
-				}
-			}
-		});
-		
+		_fab.setOnClickListener(_view -> {
+            _newTab(NEW_TAB_URL, null);
+            if (VIEW_WV_ON_ADD) {
+                _goToWebScreen(webViewList.size() - 1);
+            }
+        });
+
 		_reqNet_request_listener = new RequestNetwork.RequestListener() {
 			@Override
 			public void onResponse(String _param1, String _param2, HashMap<String, Object> _param3) {
-				final String _tag = _param1;
-				final String _response = _param2;
-				final HashMap<String, Object> _responseHeaders = _param3;
-				if (urlbar.getText().toString().trim().length() > 0) {
+                if (!urlBar.getText().toString().trim().isEmpty()) {
 					listQueries.clear();
-					_refreshLocalQueries(urlbar.getText().toString().trim());
+					_refreshLocalQueries(urlBar.getText().toString().trim());
 					try {
-						ArrayList<Object> objects = new Gson().fromJson(_response, new TypeToken<ArrayList<Object>>(){}.getType());
+						ArrayList<Object> objects = new Gson().fromJson(_param2, new TypeToken<ArrayList<Object>>(){}.getType());
 						for (String query : (ArrayList<String>)objects.get(1)) {
-							if (!query.equals(urlbar.getText().toString())) {
+							if (!query.equals(urlBar.getText().toString())) {
 								HashMap<String, Object> tmpHashMap = new HashMap<>();
 								tmpHashMap.put("query", query);
 								tmpHashMap.put("isURL", _isValidUrl(query) || (query.contains(".") && !query.contains(" ")));
 								listQueries.add(0, tmpHashMap);
 							}
 						}
-					} catch (Exception e) {
-						 
+					} catch (Exception ignored) {
 					}
 					((BaseAdapter)query_list.getAdapter()).notifyDataSetChanged();
 				}
@@ -350,11 +289,9 @@ public class MainActivity extends AppCompatActivity {
 			
 			@Override
 			public void onErrorResponse(String _param1, String _param2) {
-				final String _tag = _param1;
-				final String _message = _param2;
-				if (urlbar.getText().toString().length() > 0) {
+                if (!urlBar.getText().toString().isEmpty()) {
 					listQueries.clear();
-					_refreshLocalQueries(urlbar.getText().toString().trim());
+					_refreshLocalQueries(urlBar.getText().toString().trim());
 					((BaseAdapter)query_list.getAdapter()).notifyDataSetChanged();
 				}
 			}
@@ -363,7 +300,7 @@ public class MainActivity extends AppCompatActivity {
 	
 	private void initializeLogic() {
 		_earlyInit();
-		tabs_list.setAdapter(new ListAdapter(webviews));
+		tabs_list.setAdapter(new ListAdapter(webViewList));
 		query_list.setAdapter(new Query_listAdapter(listQueries));
 		isIncognito = false;
 		try {
@@ -373,7 +310,7 @@ public class MainActivity extends AppCompatActivity {
 		}
 		if (isIncognito) {
 			incognito_button.setVisibility(View.GONE);
-			sadface_text.setVisibility(View.GONE);
+			sadFace_text.setVisibility(View.GONE);
 		}
 		else {
 			incognito_image.setVisibility(View.GONE);
@@ -382,63 +319,10 @@ public class MainActivity extends AppCompatActivity {
 		forward_button.setAlpha((float)(0.5d));
 		tabs_list.setVisibility(View.GONE);
 		query_list.setVisibility(View.GONE);
-		root_webview.setVisibility(View.GONE);
-		linear_findbar.setVisibility(View.GONE);
-	}
-	
-	@Override
-	protected void onActivityResult(int _requestCode, int _resultCode, Intent _data) {
-		super.onActivityResult(_requestCode, _resultCode, _data);
-		switch (_requestCode) {
-				case CHOOSE_FILE_REQUEST_CODE :
-				if (filePathCallback != null) {
-						if (_resultCode == Activity.RESULT_OK) {
-								filePathCallback.onReceiveValue(WebChromeClient.FileChooserParams.parseResult(_resultCode, _data));
-						}
-						else {
-								filePathCallback.onReceiveValue(null);
-						}
-						filePathCallback = null;
-						break;
-				}
-		}
-		switch (_requestCode) {
-			
-			default:
-			break;
-		}
+		root_webView.setVisibility(View.GONE);
+		linear_findBar.setVisibility(View.GONE);
 	}
 
-	@Override
-	@Suppress(names = "Deprecated")
-	public void onBackPressed() {
-        super.onBackPressed();
-        if (isSearching) {
-			isSearching = false;
-			linear_findbar.setVisibility(View.GONE);
-			linear_chromebar.setVisibility(View.VISIBLE);
-			findbar_input.setText("");
-		}
-		else {
-			if (urlbar.hasFocus()) {
-				urlbar.clearFocus();
-			}
-			else {
-				if (displayedWV == -1) {
-					finish();
-				}
-				else {
-					if (webviews.get(displayedWV).canGoBack()) {
-						webviews.get(displayedWV).goBack();
-					}
-					else {
-						_goBackToTabs();
-					}
-				}
-			}
-		}
-	}
-	
 	@Override
 	protected void onPostCreate(Bundle _savedInstanceState) {
 		super.onPostCreate(_savedInstanceState);
@@ -457,33 +341,33 @@ public class MainActivity extends AppCompatActivity {
 		super.onPause();
 		if (!isIncognito) {
 			// Save title & thumbnail caches
-			sharedPref.edit().putString("cachedTitle", new Gson().toJson(cachedTitle)).commit();
-			// Renumerate webviews to get its url, save it to tabUrls, and store it to shared preferences
+			sharedPref.edit().putString("cachedTitle", new Gson().toJson(cachedTitle)).apply();
+			// Remunerate web views to get its url, save it to tabUrls, and store it to shared preferences
 			ArrayList<String> tabUrls = new ArrayList<>();
-			for (WebView webview : webviews) {
+			for (WebView webview : webViewList) {
 				tabUrls.add(webview.getUrl());
 			}
-			sharedPref.edit().putString("lastTabs", new Gson().toJson(tabUrls)).commit();
+			sharedPref.edit().putString("lastTabs", new Gson().toJson(tabUrls)).apply();
 		}
 	}
 	
 
 	public void _refreshTabsCount() {
-		if (webviews.size() > 0) {
-			linear_notab.setVisibility(View.GONE);
+		if (!webViewList.isEmpty()) {
+			linear_noTab.setVisibility(View.GONE);
 			tabs_list.setVisibility(View.VISIBLE);
 		}
 		else {
 			tabs_list.setVisibility(View.GONE);
-			linear_notab.setVisibility(View.VISIBLE);
+			linear_noTab.setVisibility(View.VISIBLE);
 		}
-		if (webviews.size() > 99) {
-			tabscounter_text2.setText(":D");
-			tabscounter_text1.setText(":D");
+		if (webViewList.size() > 99) {
+			tabsCounter_text2.setText(":D");
+			tabsCounter_text1.setText(":D");
 		}
 		else {
-			tabscounter_text2.setText(String.valueOf(webviews.size()));
-			tabscounter_text1.setText(String.valueOf(webviews.size()));
+			tabsCounter_text2.setText(String.valueOf(webViewList.size()));
+			tabsCounter_text1.setText(String.valueOf(webViewList.size()));
 		}
 	}
 	
@@ -491,11 +375,11 @@ public class MainActivity extends AppCompatActivity {
 	public void _goBackToTabs() {
 		displayedWV = -1;
 		_fab.show();
-		root_webview.setVisibility(View.GONE);
+		root_webView.setVisibility(View.GONE);
 		root_tabs.setVisibility(View.VISIBLE);
-		swipelayout.removeAllViews();
+		swipeLayout.removeAllViews();
 		wv_placeholder.removeAllViews();
-		swipelayout = null;
+		swipeLayout = null;
 	}
 	
 	
@@ -505,7 +389,7 @@ public class MainActivity extends AppCompatActivity {
 			HashMap<String, Object> tmpHashMap = new HashMap<>();
 			tmpHashMap.put("query", _url);
 			tmpHashMap.put("isURL", true);
-			if (listQueries.size() > 0) {
+			if (!listQueries.isEmpty()) {
 				listQueries.set(listQueries.size() - 1, tmpHashMap);
 			}
 			else {
@@ -525,10 +409,10 @@ public class MainActivity extends AppCompatActivity {
 	
 	
 	public void _earlyInit() {
-		urlbar.setOnEditorActionListener((view, actionId, event) -> {
+		urlBar.setOnEditorActionListener((view, actionId, event) -> {
                 if (actionId == android.view.inputmethod.EditorInfo.IME_ACTION_SEARCH) {
                     if (displayedWV != -1 && (!view.getText().toString().trim().isEmpty())) {
-                        webviews.get(displayedWV).loadUrl(_validateUrl(view.getText().toString().trim()));
+                        webViewList.get(displayedWV).loadUrl(_validateUrl(view.getText().toString().trim()));
                         view.clearFocus();
                     }
 
@@ -537,89 +421,75 @@ public class MainActivity extends AppCompatActivity {
 
                 return false;
             });
-		urlbar.setOnFocusChangeListener(new OnFocusChangeListener() {
-			    @Override
-			    public void onFocusChange(View view, boolean hasFocus) {
-					if (hasFocus) {
-						query_list.setVisibility(View.VISIBLE);
-						if (!((TextView) view).getText().toString().trim().isEmpty()) {
-							_refreshLocalQueries(((TextView)view).getText().toString().trim());
-							((BaseAdapter)query_list.getAdapter()).notifyDataSetChanged();
-							if (QUERY_MODE == 2 || (QUERY_MODE == 1 && !isIncognito)) {
-								try {
-									reqNet.startRequestNetwork(RequestNetworkController.GET, String.format(QUERY_URL, URLEncoder.encode(((TextView)view).getText().toString().trim(), StandardCharsets.UTF_8.name())), "searchQuery", _reqNet_request_listener);
-								}
-								catch (UnsupportedEncodingException e) {
-									SketchwareUtil.showMessage(getApplicationContext(), e.getMessage());
-								}
-							}
-						} else {
-							listQueries.clear();
-							((BaseAdapter)query_list.getAdapter()).notifyDataSetChanged();
-						}
-					}
-				else {
-					query_list.setVisibility(View.GONE);
-					android.view.inputmethod.InputMethodManager imm = (android.view.inputmethod.InputMethodManager) getApplicationContext().getSystemService(Activity.INPUT_METHOD_SERVICE); imm.hideSoftInputFromWindow(view.getWindowToken(), 0);
-					if (displayedWV != -1) {
-						urlbar.setText(webviews.get(displayedWV).getUrl());
-					}
-					        }
-				    }
-		});
+		urlBar.setOnFocusChangeListener((view, hasFocus) -> {
+            if (hasFocus) {
+                query_list.setVisibility(View.VISIBLE);
+                if (!((TextView) view).getText().toString().trim().isEmpty()) {
+                    _refreshLocalQueries(((TextView)view).getText().toString().trim());
+                    ((BaseAdapter)query_list.getAdapter()).notifyDataSetChanged();
+				} else {
+                    listQueries.clear();
+                    ((BaseAdapter)query_list.getAdapter()).notifyDataSetChanged();
+                }
+            }
+        else {
+            query_list.setVisibility(View.GONE);
+            android.view.inputmethod.InputMethodManager imm = (android.view.inputmethod.InputMethodManager) getApplicationContext().getSystemService(Activity.INPUT_METHOD_SERVICE); imm.hideSoftInputFromWindow(view.getWindowToken(), 0);
+            if (displayedWV != -1) {
+                urlBar.setText(webViewList.get(displayedWV).getUrl());
+            }
+                    }
+            });
 		// Below are some codes that is injected to parent area, it is NOT executed inside
 	}
-	
-	private final String NEWTAB_URL = "https://www.google.com";
+
+	// Note from ryenyuku himself: Don't ever try to remove these unused variables
+	//                             they're more valuable than a Rolex watch!
+	private final String NEW_TAB_URL = "https://www.google.com";
 	private final String SEARCH_URL = "https://www.google.com/search?q=%s";
 	private final String QUERY_URL = "https://www.google.com/complete/search?client=chrome&q=%s";
 	private final String HTTP_PREFIX = " http://%s";
 	private final int COOKIES_MODE = 1;
-	private final int SAFEBROWSING_MODE = 1;
-	private final int DOMSTORAGE_MODE = 1;
+	private final int SAFE_BROWSING_MODE = 1;
+	private final int DOM_STORAGE_MODE = 1;
 	private final int CACHE_MODE = 1;
-	private final int DBAPI_MODE = 1;
+	private final int DB_API_MODE = 1;
 	private final boolean ENABLE_AUTOPLAY = false;
 	private final boolean ENABLE_JAVASCRIPT = true;
 	private final int QUERY_MODE = 1;
 	private final boolean VIEW_WV_ON_ADD = false;
 	private final ArrayList<String> VALID_PROTOCOLS = new ArrayList<>(Arrays.asList("http", "https", "file", "ftp", "intent", "mailto", "about"));
 	private final ArrayList<String> VALID_HOST_PROTOCOLS = new ArrayList<>(Arrays.asList("http", "https", "file", "ftp"));
-	private DownloadListener webDownloadListener = new DownloadListener()
-	   {
-		  @Override  
-		   public void onDownloadStart(String url, String userAgent,
-		        String contentDisposition, String mimeType,
-		        long contentLength) {
-			    DownloadManager.Request request = new DownloadManager.Request(
-			            Uri.parse(url));
-			    request.setMimeType(mimeType);
-			    String cookies = CookieManager.getInstance().getCookie(url);
-			    request.addRequestHeader("cookie", cookies);
-			    request.addRequestHeader("User-Agent", userAgent);
-			    request.setDescription("Downloading file...");
-			    request.setTitle(URLUtil.guessFileName(url, contentDisposition,
-			            mimeType));
-			    request.allowScanningByMediaScanner();
-			    request.setNotificationVisibility(DownloadManager.Request.VISIBILITY_VISIBLE_NOTIFY_COMPLETED);
-			    request.setDestinationInExternalPublicDir(
-			            Environment.DIRECTORY_DOWNLOADS, URLUtil.guessFileName(
-			                    url, contentDisposition, mimeType));
-			    DownloadManager dm = (DownloadManager) getSystemService(DOWNLOAD_SERVICE);
-			    dm.enqueue(request);
-			    Toast.makeText(getApplicationContext(), "Downloading File",
-			            Toast.LENGTH_LONG).show();
-		}};
-	private WebViewClient webViewClient = new WebViewClient() {
+	private final DownloadListener webDownloadListener = (url, userAgent, contentDisposition, mimeType, contentLength) -> {
+          DownloadManager.Request request = new DownloadManager.Request(
+                  Uri.parse(url));
+          request.setMimeType(mimeType);
+          String cookies = CookieManager.getInstance().getCookie(url);
+          request.addRequestHeader("cookie", cookies);
+          request.addRequestHeader("User-Agent", userAgent);
+          request.setDescription("Downloading file...");
+          request.setTitle(URLUtil.guessFileName(url, contentDisposition,
+                  mimeType));
+          request.allowScanningByMediaScanner();
+          request.setNotificationVisibility(DownloadManager.Request.VISIBILITY_VISIBLE_NOTIFY_COMPLETED);
+          request.setDestinationInExternalPublicDir(
+                  Environment.DIRECTORY_DOWNLOADS, URLUtil.guessFileName(
+                          url, contentDisposition, mimeType));
+          DownloadManager dm = (DownloadManager) getSystemService(DOWNLOAD_SERVICE);
+          dm.enqueue(request);
+          Toast.makeText(getApplicationContext(), "Downloading File",
+                  Toast.LENGTH_LONG).show();
+  };
+	private final WebViewClient webViewClient = new WebViewClient() {
 		@Override
 		public void onPageStarted(WebView view, String url, Bitmap favicon) {
 			super.onPageStarted(view, url, favicon);
 			((BaseAdapter)tabs_list.getAdapter()).notifyDataSetChanged();
-			if (displayedWV != -1 && swipelayout.getChildAt(0) == view) {
-				if (!urlbar.hasFocus()) {
-					urlbar.setText(url);
+			if (displayedWV != -1 && swipeLayout.getChildAt(0) == view) {
+				if (!urlBar.hasFocus()) {
+					urlBar.setText(url);
 				}
-				if (webviews.get(displayedWV).canGoForward()) {
+				if (webViewList.get(displayedWV).canGoForward()) {
 					forward_button.setEnabled(true);
 					forward_button.setAlpha((float)(1));
 				}
@@ -637,11 +507,11 @@ public class MainActivity extends AppCompatActivity {
 		public void onPageFinished(WebView view, String url) {
 			super.onPageFinished(view, url);
 			((BaseAdapter)tabs_list.getAdapter()).notifyDataSetChanged();
-			if (displayedWV != -1 && swipelayout.getChildAt(0) == view) {
-				if (!urlbar.hasFocus()) {
-					urlbar.setText(url);
+			if (displayedWV != -1 && swipeLayout.getChildAt(0) == view) {
+				if (!urlBar.hasFocus()) {
+					urlBar.setText(url);
 				}
-				if (webviews.get(displayedWV).canGoForward()) {
+				if (webViewList.get(displayedWV).canGoForward()) {
 					forward_button.setEnabled(true);
 					forward_button.setAlpha((float)(1));
 				}
@@ -651,14 +521,14 @@ public class MainActivity extends AppCompatActivity {
 				}
 				isLoading = false;
 				refresh_button.setImageResource(R.drawable.ic_refresh_24);
-				swipelayout.setRefreshing(false);
+				swipeLayout.setRefreshing(false);
 				wv_progressbar.setVisibility(View.INVISIBLE);
 			}
 		}
 		
 		@Override
 		public boolean shouldOverrideUrlLoading(WebView view, WebResourceRequest request) {
-			if (request.getUrl().getScheme().equals("intent")) {
+			if (Objects.equals(request.getUrl().getScheme(), "intent")) {
 				try {
 					Intent intent = Intent.parseUri(request.getUrl().toString(), Intent.URI_INTENT_SCHEME);
 					if (intent.resolveActivity(getApplicationContext().getPackageManager()) != null) {
@@ -669,13 +539,13 @@ public class MainActivity extends AppCompatActivity {
 						SketchwareUtil.showMessage(getApplicationContext(), "No supported application found to handle this operation.");
 					}
 				}
-				catch (URISyntaxException e) {
+				catch (URISyntaxException ignored) {
 				}
 			}
 			return false;
 		}
 	};
-	private WebChromeClient webChromeClient = new WebChromeClient() {
+	private final WebChromeClient webChromeClient = new WebChromeClient() {
 		@Override
 		public void onReceivedIcon(WebView view, Bitmap icon) {
 			super.onReceivedIcon(view, icon);
@@ -693,7 +563,7 @@ public class MainActivity extends AppCompatActivity {
 		@Override
 		public boolean onShowFileChooser(WebView view, ValueCallback<Uri[]> filePathCallback, WebChromeClient.FileChooserParams fileChooserParams) {
 			MainActivity.this.filePathCallback = filePathCallback;
-			startActivityForResult(fileChooserParams.createIntent(), CHOOSE_FILE_REQUEST_CODE);
+			activityResultLauncher.launch(fileChooserParams.createIntent());
 			return true;
 		}
 		
@@ -715,78 +585,122 @@ public class MainActivity extends AppCompatActivity {
 				SketchwareUtil.showMessage(getApplicationContext(), "POPUP BLOCKED");
 				return false;
 			}
-			swipelayout.removeAllViews();
+			swipeLayout.removeAllViews();
 			wv_placeholder.removeAllViews();
-			swipelayout = null;
+			swipeLayout = null;
 			_newTab(null, null);
-			_goToWebScreen(webviews.size() - 1);
+			_goToWebScreen(webViewList.size() - 1);
 			WebView.WebViewTransport transport = (WebView.WebViewTransport) resultMsg.obj;
-			transport.setWebView(webviews.get(webviews.size() - 1));
+			transport.setWebView(webViewList.get(webViewList.size() - 1));
 			resultMsg.sendToTarget();
 			return true;
 		}
 	};
-		public class ListAdapter extends BaseAdapter {
-				ArrayList<WebView> _data;
-				public ListAdapter(ArrayList<WebView> _arr) {
-						_data = _arr;
-				}
-				
-				@Override
-				public int getCount() {
-						return _data.size();
-				}
-				
-				@Override
-				public WebView getItem(int _index) {
-						return _data.get(_index);
-				}
-				
-				@Override
-				public long getItemId(int _index) {
-						return _index;
-				}
-		
-				@Override
-				public View getView(final int _position, View _view, ViewGroup _viewGroup) {
-						LayoutInflater _inflater = getLayoutInflater();
-						View _v = _view;
-						if (_v == null) {
-								_v = _inflater.inflate(R.layout.tabs, null);
+	private final OnBackPressedCallback onBackPressedCallback = new OnBackPressedCallback(true) {
+		@Override
+		public void handleOnBackPressed() {
+			if (isSearching) {
+				isSearching = false;
+				linear_findBar.setVisibility(View.GONE);
+				linear_chromeBar.setVisibility(View.VISIBLE);
+				findBar_input.setText("");
+			} else {
+				if (urlBar.hasFocus()) {
+					urlBar.clearFocus();
+				} else {
+					if (displayedWV == -1) {
+						finish();
+					} else {
+						if (webViewList.get(displayedWV).canGoBack()) {
+							webViewList.get(displayedWV).goBack();
+						} else {
+							_goBackToTabs();
 						}
-						
-						final ImageView thumb_image = (ImageView) _v.findViewById(R.id.thumb_image);
-						final TextView title_text = (TextView) _v.findViewById(R.id.title_text);
-						final ImageView delete_button = (ImageView) _v.findViewById(R.id.delete_button);
-			// Set the title and favicon to their webview's title and favicon
-			title_text.setText(webviews.get(_position).getTitle());
-			if (webviews.get(_position).getFavicon() == null) {
+					}
+				}
+			}
+		}
+	};
+	private final ActivityResultLauncher<Intent> activityResultLauncher = registerForActivityResult(
+			new ActivityResultContracts.StartActivityForResult(),
+			new ActivityResultCallback<ActivityResult>() {
+				@Override
+				public void onActivityResult(ActivityResult result) {
+					final int _resultCode = result.getResultCode();
+					final Intent _data = result.getData();
+
+					if (filePathCallback != null) {
+						if (_resultCode == Activity.RESULT_OK) {
+							filePathCallback.onReceiveValue(WebChromeClient.FileChooserParams.parseResult(_resultCode, _data));
+						} else {
+							filePathCallback.onReceiveValue(null);
+						}
+						filePathCallback = null;
+					}
+				}
+			}
+	);
+	public class ListAdapter extends BaseAdapter {
+		ArrayList<WebView> _data;
+		public ListAdapter(ArrayList<WebView> _arr) {
+			_data = _arr;
+		}
+
+		@Override
+		public int getCount() {
+			return _data.size();
+		}
+
+		@Override
+		public WebView getItem(int _index) {
+			return _data.get(_index);
+		}
+				
+		@Override
+		public long getItemId(int _index) {
+			return _index;
+		}
+		
+		@SuppressLint("InflateParams")
+        @Override
+		public View getView(final int _position, View _view, ViewGroup _viewGroup) {
+			LayoutInflater _inflater = getLayoutInflater();
+			View _v = _view;
+			if (_v == null) {
+				_v = _inflater.inflate(R.layout.tabs, null);
+			}
+
+			final ImageView thumb_image = _v.findViewById(R.id.thumb_image);
+			final TextView title_text = _v.findViewById(R.id.title_text);
+			final ImageView delete_button = _v.findViewById(R.id.delete_button);
+			// Set the title and favicon to their web view's title and favicon
+			title_text.setText(webViewList.get(_position).getTitle());
+			if (webViewList.get(_position).getFavicon() == null) {
 				thumb_image.setImageResource(R.drawable.ic_language_24);
 			}
 			else {
-				thumb_image.setImageBitmap(webviews.get(_position).getFavicon());
+				thumb_image.setImageBitmap(webViewList.get(_position).getFavicon());
 			}
 			delete_button.setOnClickListener(new View.OnClickListener() {
 				@Override
 				public void onClick(View _view) {
-					webviews.get(_position).destroy();
-					webviews.remove(_position);
+					webViewList.get(_position).destroy();
+					webViewList.remove(_position);
 					((BaseAdapter)tabs_list.getAdapter()).notifyDataSetChanged();
 					_refreshTabsCount();
 				}
 			});
-						return _v;
-				}
+			return _v;
+		}
 	}
-	
-	
+
 	public void _goToWebScreen(final int _position) {
 		displayedWV = _position;
 		_fab.hide();
 		root_tabs.setVisibility(View.GONE);
-		root_webview.setVisibility(View.VISIBLE);
-		urlbar.setText(webviews.get(_position).getUrl());
-		if (webviews.get(_position).canGoForward()) {
+		root_webView.setVisibility(View.VISIBLE);
+		urlBar.setText(webViewList.get(_position).getUrl());
+		if (webViewList.get(_position).canGoForward()) {
 			forward_button.setEnabled(true);
 			forward_button.setAlpha((float)(1.0d));
 		}
@@ -798,15 +712,15 @@ public class MainActivity extends AppCompatActivity {
 		refresh_button.setImageResource(R.drawable.ic_refresh_24);
 		wv_progressbar.setVisibility(View.INVISIBLE);
 		wv_progressbar.setProgress(0);
-		swipelayout = new SwipeRefreshLayout(MainActivity.this);
-		swipelayout.setLayoutParams(new LinearLayout.LayoutParams(LinearLayout.LayoutParams.MATCH_PARENT, LinearLayout.LayoutParams.MATCH_PARENT));
-		swipelayout.setOnRefreshListener(() -> {
+		swipeLayout = new SwipeRefreshLayout(MainActivity.this);
+		swipeLayout.setLayoutParams(new LinearLayout.LayoutParams(LinearLayout.LayoutParams.MATCH_PARENT, LinearLayout.LayoutParams.MATCH_PARENT));
+		swipeLayout.setOnRefreshListener(() -> {
 			if (displayedWV != -1) {
-				webviews.get(displayedWV).reload();
+				webViewList.get(displayedWV).reload();
 			}
 		});
-		swipelayout.addView(webviews.get(_position));
-		wv_placeholder.addView(swipelayout);
+		swipeLayout.addView(webViewList.get(_position));
+		wv_placeholder.addView(swipeLayout);
 		wv_placeholder.requestFocus();
 	}
 
@@ -852,18 +766,16 @@ public class MainActivity extends AppCompatActivity {
 				return (String.format(HTTP_PREFIX, _url));
 			}
 			else {
-				try {
-					String parsedUrl = URLEncoder.encode(_url, StandardCharsets.UTF_8.name());
-					return String.format(SEARCH_URL, parsedUrl);
-				}
-				catch (UnsupportedEncodingException e) {
-					SketchwareUtil.showMessage(getApplicationContext(), e.getMessage());
-				}
-			}
+                String parsedUrl = null;
+                if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.TIRAMISU) {
+                    parsedUrl = URLEncoder.encode(_url, StandardCharsets.UTF_8);
+                }
+                return String.format(SEARCH_URL, parsedUrl);
+            }
 		}
-		return ("about:blank");
+		// return ("about:blank");
 	}
-	
+
 	
 	public boolean _isValidUrl(final String _url) {
 		int colon = _url.indexOf(":");
@@ -873,17 +785,17 @@ public class MainActivity extends AppCompatActivity {
 		try {
 			URI uri = new URI(_url);
 			if (VALID_HOST_PROTOCOLS.contains(proto)) {
-				if (uri.getHost() == null && uri.getPath() == null) return false;
+                return uri.getHost() != null || uri.getPath() != null;
 			}
 			return true;
-		}
-		catch (URISyntaxException e) {
+		} catch (URISyntaxException ignored) {
 		}
 		return (false);
 	}
 	
 	
-	public void _newTab(final String _url, final WebView _view) {
+	@SuppressLint("SetJavaScriptEnabled")
+    public void _newTab(final String _url, final WebView _view) {
 		// Initialise a webview
 		WebView webview;
 		if (_view == null) {
@@ -929,7 +841,7 @@ public class MainActivity extends AppCompatActivity {
 			webview.loadUrl(_url);
 		}
 		// Add the webview to the array
-		webviews.add(webview);
+		webViewList.add(webview);
 		((BaseAdapter)tabs_list.getAdapter()).notifyDataSetChanged();
 		_refreshTabsCount();
 	}
@@ -957,7 +869,8 @@ public class MainActivity extends AppCompatActivity {
 			return _index;
 		}
 		
-		@Override
+		@SuppressLint("InflateParams")
+        @Override
 		public View getView(final int _position, View _v, ViewGroup _container) {
 			LayoutInflater _inflater = getLayoutInflater();
 			View _view = _v;
@@ -967,17 +880,17 @@ public class MainActivity extends AppCompatActivity {
 			
 			final LinearLayout linear_root = _view.findViewById(R.id.linear_root);
 			final ImageView thumb_image = _view.findViewById(R.id.thumb_image);
-			final LinearLayout linear_subroot = _view.findViewById(R.id.linear_subroot);
-			final TextView title_text = _view.findViewById(R.id.title_text);
+            final TextView title_text = _view.findViewById(R.id.title_text);
 			final TextView subtitle_text = _view.findViewById(R.id.subtitle_text);
-			
-			title_text.setText(_data.get((int)_position).get("query").toString());
-			if ((boolean)_data.get(_position).get("isURL")) {
+
+			final Object isUrl = Objects.requireNonNull(_data.get(_position).get("isURL"));
+			title_text.setText(Objects.requireNonNull(_data.get((int) _position).get("query")).toString());
+			if (_data.get(_position).containsKey("isURL") && (boolean)isUrl) {
 				thumb_image.setImageResource(R.drawable.ic_language_24);
 				String tmpParsedUrl = _validateUrl((String)_data.get(_position).get("query"));
 				subtitle_text.setText(tmpParsedUrl);
 				if (cachedTitle.containsKey(_stripUrl(tmpParsedUrl, true))) {
-					title_text.setText(cachedTitle.get(_stripUrl(tmpParsedUrl, true)).toString());
+					title_text.setText(Objects.requireNonNull(cachedTitle.get(_stripUrl(tmpParsedUrl, true))).toString());
 				}
 				if (cachedThumb.containsKey(_stripUrl(tmpParsedUrl, false))) {
 					thumb_image.setImageBitmap((Bitmap)cachedThumb.get(_stripUrl(tmpParsedUrl, false)));
